--- a/src/hw2/CMakeLists.txt
+++ b/src/hw2/CMakeLists.txt
@@ -51,6 +51,8 @@ find_package(catkin REQUIRED COMPONENTS
  add_message_files(
    FILES
    Jacobian.msg
+   TrajectoryCommand.msg
+   TrajectoryMultiCommand.msg
  )
 
 ## Generate services in the 'srv' folder
@@ -72,6 +74,7 @@ find_package(catkin REQUIRED COMPONENTS
    DEPENDENCIES
    std_msgs
    geometry_msgs
+   hw2
  )
 
 ################################################
