--- a/src/hw2/package.xml
+++ b/src/hw2/package.xml
@@ -42,8 +42,10 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>visualization_msgs</build_depend>
+  <build_depend>baxter_core_msgs</build_depend>
   <run_depend>rospy</run_depend>
   <run_depend>visualization_msgs</run_depend>
+  <run_depend>baxter_core_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
