--- a/src/project3/package.xml
+++ b/src/project3/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>hw3</name>
+  <name>project3</name>
   <version>0.0.0</version>
-  <description>The hw3 package</description>
+  <description>The project3 package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
